--- a/learn-solidity/src/main/resources/hpc.properties
+++ b/learn-solidity/src/main/resources/hpc.properties
@@ -1,7 +1,7 @@
 node={"nodes":["10.10.77.161","10.10.77.162","10.10.77.163","10.10.77.164"]}
 jsonRpcPort=[8081, 8081, 8081, 8081]
 webSocketPort=[10001, 10001, 10001, 10001]
-namespace=global
+namespace=chain1
 #重发次数
 resendTime=1
 #第一次轮询时间间隔 unit /ms
