--- a/learn-web/src/main/resources/application.properties
+++ b/learn-web/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 server.port=8088
 server.servlet.context-path=/learn
 
-spring.application.name=learn
+spring.application.name=eureka-server
 spring.mvc.date-format=yyyy-MM-dd
 spring.profiles.active=dev
+
+#spring.security.user.name=anxminise
+#spring.security.user.password=123456
+#服务注册中心IP地址
+eureka.instance.hostname=localhost
+#是否向服务注册中心注册自己
+eureka.client.register-with-eureka=false
+#是否检索服务
+eureka.client.fetch-registry=false
+#服务注册中心的配置内容，指定服务注册中心的位置 ${server.port}
+eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
