--- a/learn-flink/src/main/resources/application.yml
+++ b/learn-flink/src/main/resources/application.yml
@@ -1,7 +1,17 @@
 server:
   port: 8080
 
+#eureka的配置  注册
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8088/eureka/
+  instance:
+    instance-id: springcloud-provider-dept8001  # 修改eureka上默认描述信息
+
 spring:
+  application:
+    name: learn-flink
   activemq:
     broker-url: tcp://127.0.0.1:61616
     user: admin
