--- a/learn-web/pom.xml
+++ b/learn-web/pom.xml
@@ -7,32 +7,16 @@
         <groupId>cn.com.ljw</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>learn-web</artifactId>
-
     <name>learn-web</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
 
     <dependencies>
-
         <dependency>
             <groupId>cn.com.ljw</groupId>
             <artifactId>learn-solidity</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <!--<dependency>-->
-            <!--<groupId>cn.com.ljw</groupId>-->
-            <!--<artifactId>learn-flink</artifactId>-->
-            <!--<version>0.0.1-SNAPSHOT</version>-->
-        <!--</dependency>-->
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -107,7 +91,7 @@
 
         <dependency>
             <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <artifactId>springfox-swagger-ui</artifactId>
             <version>2.8.0</version>
         </dependency>
 
